# serverless-rust-template

./: Cargo.toml  cargo-generate.toml  template.yaml
src/: main.rs
