[package]
name = "{{ crate_name }}"
version = "0.1.0"
authors = ["{{ authors }}"]
edition = "2021"
description = "{{ project-name }}, a sample serverless application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.9"
aws-sdk-dynamodb = "0.9"
aws-smithy-client = { version = "0.39", features = ["test-util"] }
lambda_http = "0.5"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
aws-smithy-http = "0.39"
aws-types = { version = "0.9", features = ["hardcoded-credentials"] }
http = "0.2"